# MaizeEngine

./: CMakeLists.txt  README.md
cmake/: MinGW-toolchain.cmake
sandbox/: CMakeLists.txt
sandbox/assets/: TestRailAutoTil.aseprite  TestRailAutoTile.aseprite
sandbox/src/: ChunkManager.h  FuzzyShape.h  Grid.h  GridConversion.cpp  GridConversion.h  MineCarMovement.cpp  MineCarMovement.h  MineRailPlacement.cpp  MineRailPlacement.h  PlaceGridTile.h  Rail.h  RailController.h  RailRotations.h  RailSelector.h  RailTile.h  RailTileChooser.cpp  RailTileChooser.h  RailTypes.h  Sandbox.cpp  StaticHelperBase.h  TestScene.h
sandbox/src/Components/: ChunkManager.h  Grid.h  PlaceChunkTile.h  RailController.h  RailPath.h  RailPathRequest.h  RailRotations.h  RailSelector.h
sandbox/src/Scenes/: TestScene.h
sandbox/src/Systems/: MineCarMovement.cpp  MineCarMovement.h  MineCarRotate.cpp  MineCarRotate.h  MineRailPlacement.cpp  MineRailPlacement.h  RailPathfinding.cpp  RailPathfinding.h  RailTileChooser.cpp  RailTileChooser.h
sandbox/src/Utils/: FuzzyShape.h  GridConversion.cpp  GridConversion.h  PlaceRailData.h  Rail.h  RailTile.h  RailTurnDirection.h
src/: Maize.h  PrecompiledHeader.h
src/Maize/Core/: Application.cpp  Application.h  EntryPoint.cpp  Instrumentor.h  KeyCodes.h
src/Maize/Core/Macros/: Assert.h  Log.cpp  Log.h  PlatformDetection.h
src/Maize/Event/: Event.h  EventDispatcher.h  EventHandler.cpp  EventHandler.h
src/Maize/Event/EventTypes/: KeyEvent.h  MouseEvent.h  WindowEvent.h
src/Maize/Math/: Math.h  Rect.h  Vec2.h
src/Maize/Rendering/: Mesh.cpp  Mesh.h  MeshGrid.cpp  MeshGrid.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h
src/Maize/Scene/: Entity.h  Scene.h  SceneManager.cpp  SceneManager.h  SystemState.h
src/Maize/Scene/Components/: Active.h  ChangeScene.h  Input.h  Position.h  SceneComponents.h
src/Maize/Scene/Components/Rendering/: Camera.h  DeferredRenderable.h  GridRenderer.h  MeshRenderer.h  RenderingContext.h  SpriteRenderer.h
src/Maize/Scene/Systems/: InputSystem.cpp  InputSystem.h
src/Maize/Scene/Systems/Rendering/: RenderComponentChange.cpp  RenderComponentChange.h  RenderingSystem.cpp  RenderingSystem.h
src/Maize/Utils/: SpatialHashGrid.cpp  SpatialHashGrid.h
test/: Application.test.cpp  CMakeLists.txt
test/src/: Entity.test.cpp  Event.test.cpp  Mesh.test.cpp  Rect.test.cpp  Renderer.test.cpp  SceneManager.test.cpp  SpatialHashGrid.test.cpp  Sprite.test.cpp  Vec2.test.cpp
